<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" >

    <ImageButton
        android:id="@+id/playlist_button_repeat"
        style="@style/ToggleButton"
        android:minWidth="54dp"
        android:contentDescription="@string/playlist_repeat"
        android:src="@drawable/ic_mp_repeat_off_btn" />

    <ImageButton
        android:id="@+id/playlist_button_shuffle"
        style="@style/ToggleButton"
        android:minWidth="54dp"
        android:contentDescription="@string/playlist_shuffle"
        android:src="@drawable/ic_mp_shuffle_off_btn" />

    <ImageButton
        android:id="@+id/button_fullscreen"
        style="@style/ToggleButton"
        android:minWidth="54dp"
        android:contentDescription="@string/toggle_fullscreen"
        android:src="@drawable/ic_mp_more_btn" />
    
    <ImageButton
        android:id="@+id/button_avsync"
        style="@style/ToggleButton"
        android:minWidth="54dp"
        android:contentDescription="@string/hotkeys"
        android:src="@drawable/ic_mp_more_btn" />
    
    <ImageButton
        android:id="@+id/button_hotkeys"
        style="@style/ToggleButton"
        android:minWidth="54dp"
        android:contentDescription="@string/hotkeys"
        android:src="@drawable/ic_mp_more_btn" />
    

</merge>