<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
     >

	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="10dp"
	    android:gravity="center"
	    android:orientation="vertical" >

	    <RelativeLayout
	        android:id="@+id/rate_text_container"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:paddingLeft="10dp"
	        android:paddingRight="10dp"
	        android:gravity="center"
	        android:orientation="horizontal" >
		    <TextView
		        android:id="@+id/rate_text_label"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:paddingTop="6pt"
		        android:text="@string/avsync_rate"
		        android:textSize="9pt" />
	
		    <TextView
		        android:id="@+id/rate_text"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentRight="true"
		        android:paddingTop="6pt"
		        android:text="@string/avsync_rate"
		        android:textSize="9pt" />
		</RelativeLayout>
		
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="50dp"
	        android:gravity="center"
	        android:orientation="horizontal" >

	        <Button
	            android:id="@+id/rate_decrease"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/avsync_slower" />

	        <Button
	            android:id="@+id/rate_reset"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/avsync_reset" />

	        <Button
	            android:id="@+id/rate_increase"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/avsync_faster" />
	    </LinearLayout>

	    <RelativeLayout
	        android:id="@+id/audiodelay_text_container"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:paddingLeft="10dp"
	        android:paddingRight="10dp"
	        android:gravity="center"
	        android:orientation="horizontal" >
		    <TextView
		        android:id="@+id/audiodelay_text_label"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:paddingTop="6pt"
		        android:text="@string/avsync_audiodelay"
		        android:textSize="9pt" />
	
		    <TextView
		        android:id="@+id/audiodelay_text"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentRight="true"
		        android:paddingTop="6pt"
		        android:text="@string/avsync_audiodelay"
		        android:textSize="9pt" />
		</RelativeLayout>

		<SeekBar
		    android:id="@+id/audiodelay_seekbar"
		    android:layout_width="match_parent"
		    android:layout_height="50dp"
		    android:max="100"
		    android:progress="50"
		    android:padding="10dp" 
		    android:visibility="gone"/>

	    <LinearLayout
	        android:id="@+id/audiodelay_buttons"
	        android:layout_width="fill_parent"
	        android:layout_height="50dp"
	        android:gravity="center"
	        android:orientation="horizontal" >

	        <Button
	            android:id="@+id/audiodelay_decrease"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/avsync_decrease" />

	        <Button
	            android:id="@+id/audiodelay_reset"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/avsync_reset" />

	        <Button
	            android:id="@+id/audiodelay_increase"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/avsync_increase" />
	    </LinearLayout>

	    <RelativeLayout
	        android:id="@+id/subtitledelay_text_container"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:paddingLeft="10dp"
	        android:paddingRight="10dp"
	        android:gravity="center"
	        android:orientation="horizontal" >
		    <TextView
		        android:id="@+id/subtitledelay_text_label"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:paddingTop="6pt"
		        android:text="@string/avsync_subtitledelay"
		        android:textSize="9pt" />
	
		    <TextView
		        android:id="@+id/subtitledelay_text"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentRight="true"
		        android:paddingTop="6pt"
		        android:text="@string/avsync_subtitledelay"
		        android:textSize="9pt" />
		</RelativeLayout>
		<SeekBar
		    android:id="@+id/subtitledelay_seekbar"
		    android:layout_width="match_parent"
		    android:layout_height="50dp"
		    android:max="100"
		    android:progress="50"
		    android:padding="10dp" 
		    android:visibility="gone"/>
	    <LinearLayout
	        android:id="@+id/subtitledelay_buttons"
	        android:layout_width="fill_parent"
	        android:layout_height="50dp"
	        android:gravity="center"
	        android:orientation="horizontal" >

	        <Button
	            android:id="@+id/subtitledelay_decrease"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/avsync_decrease" />

	        <Button
	            android:id="@+id/subtitledelay_reset"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/avsync_reset" />

	        <Button
	            android:id="@+id/subtitledelay_increase"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/avsync_increase" />
	    </LinearLayout>

</LinearLayout>
</ScrollView>